Add comments on workaround to upgrade test

--- a/tests/results/ngf-upgrade/2.1.0/2.1.0-oss.md
+++ b/tests/results/ngf-upgrade/2.1.0/2.1.0-oss.md
@@ -23,6 +23,7 @@ GKE Cluster:
 ## Summary:
 
 - This is the first test result since the 2.0 architecture change since you cannot upgrade from 1.6 -> 2.0. With this test setup, there is downtime when upgrading NGF. 
+- There is a manual workaround for this release which involves uninstalling then re-installing NGF, which should lead to no downtime on the data plane. Hopefully our new readiness probe will fix this issue in the next release.
 
 ## Test: Send https /tea traffic
 
